--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:ignore="HardcodedText"
     tools:context=".MainActivity">
     <LinearLayout
+        android:id="@+id/top"
+        android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:layout_margin="8dp"
         android:layout_width="match_parent"
@@ -39,6 +39,8 @@
     </LinearLayout>
 
     <TextView
+        android:layout_below="@id/top"
+        android:layout_centerHorizontal="true"
         android:id="@+id/loading"
         android:visibility="gone"
         android:layout_margin="16dp"
@@ -50,8 +52,19 @@
         android:textSize="26sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/top"
         android:id="@+id/imageScroll"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-</LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="12dp"
+        android:visibility="gone" />
+</RelativeLayout>
