--- a/app/src/main/res/layout/card_image.xml
+++ b/app/src/main/res/layout/card_image.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:scaleType="centerCrop"
             android:layout_gravity="center"
             android:contentDescription="IMAGE"
             tools:ignore="HardcodedText" />
