--- a/app/src/main/res/drawable/rounded_button_2.xml
+++ b/app/src/main/res/drawable/rounded_button_2.xml
@@ -3,14 +3,14 @@
 
     <stroke
         android:width="1dp"
-        android:color="#E53935" />
+        android:color="#039BE5" />
 
-    <solid android:color="#E53935" />
+    <solid android:color="#039BE5" />
 
     <padding
+        android:bottom="1dp"
         android:left="1dp"
         android:right="1dp"
-        android:bottom="1dp"
         android:top="1dp" />
 
     <corners android:radius="15dp" />
