Adds subreddit saving

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,7 @@
                 android:visibility="gone" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:layout_margin="4dp"
                 android:id="@+id/imageScroll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
