--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,12 +5,34 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
     tools:ignore="HardcodedText">
+    <TextView
+        android:id="@+id/default_load"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="12dp"
+        android:text="Set Preferred Resolution:"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/default_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/default_load"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
+        android:background="@drawable/edit_states"
+        android:hint="Default sub"
+        android:importantForAutofill="no"
+        android:inputType="text"
+        android:padding="8dp" />
 
     <TextView
         android:id="@+id/pref_res_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/default_edit"
         android:layout_margin="12dp"
         android:text="Set Preferred Resolution:"
         android:textColor="@android:color/white"
@@ -79,6 +101,7 @@
         android:orientation="vertical">
 
         <RadioButton
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
             android:id="@+id/sort_new"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -88,6 +111,7 @@
             android:textSize="14sp" />
 
         <RadioButton
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
             android:id="@+id/sort_hot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
