--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_margin="12dp"
-        android:text="Set Preferred Resolution:"
+        android:text="Set Default Subreddit:"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
