Optimizes image loading to decrease waiting time

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -155,6 +155,7 @@
             android:background="@drawable/rounded_button"
             android:foreground="@drawable/ripple"
             android:text="Clear Saved Subs"
+            android:onClick="clearSavedSubs"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </RelativeLayout>
