--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,9 +6,9 @@
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
-        android:orderInCategory="100"
-        android:title="SETTINGS"
-        app:showAsAction="always" />
+        android:orderInCategory="60"
+        android:title="Settings"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/saved_subs"
@@ -16,4 +16,22 @@
         android:orderInCategory="50"
         android:title="SAVED"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/recc_subs"
+        android:orderInCategory="40"
+        android:title="Recommendations"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/history"
+        android:orderInCategory="30"
+        android:title="History"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/fav_pics"
+        android:orderInCategory="10"
+        android:title="Favorite Pictures"
+        app:showAsAction="never" />
 </menu>
