Fixes minor bug with search

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -120,6 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
+                android:gravity="center"
                 android:layout_margin="16dp"
                 android:text="LOADING..."
                 android:textColor="#FFFFFF"
