Fixed a minor threading issue

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,9 +73,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/top"
+                android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="4dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="-8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
                 android:padding="8dp"
                 android:paddingStart="14dp"
                 android:paddingEnd="8dp">
