Adds downloading!! Fires notification to view image in a gallery

--- a/app/src/main/res/layout-v23/activity_wall.xml
+++ b/app/src/main/res/layout-v23/activity_wall.xml
@@ -36,6 +36,7 @@
             android:textColor="@android:color/white" />
 
         <Button
+            android:onClick="downloadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
