--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -35,6 +35,7 @@
             android:textColor="@android:color/white" />
 
         <Button
+            android:onClick="downloadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
