--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -93,60 +93,59 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/img_sort_title"
+                android:id="@+id/scale_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:text="Sort Images By:"
+                android:text="Set image scale down: "
                 android:textColor="@android:color/white"
                 android:textSize="16sp" />
 
-            <RadioGroup
-                android:id="@+id/sort_options"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/sort_new"
+                <SeekBar
+
+                    android:id="@+id/scale_seek"
+                    android:layout_margin="12dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="     New"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />
+                    android:layout_weight="2"
+                    android:max="3"
+                    android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
 
-                <RadioButton
-                    android:id="@+id/sort_hot"
+                <TextView
+                    android:id="@+id/scale_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="     Hot"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />
+                    android:layout_gravity="center"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:text="2x"
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
-                <RadioButton
-                    android:id="@+id/sort_top"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="     Top"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />
-            </RadioGroup>
-
+            <Switch
+                android:id="@+id/gif_switch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:switchPadding="10dp"
+                android:text="Load gifs from reddit"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:theme="@style/ThemeOverlay.AppCompat.DayNight" />
         </LinearLayout>
     </ScrollView>
 
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="8dp"
         android:orientation="vertical">
@@ -158,16 +157,6 @@
             android:background="@drawable/rounded_button"
             android:foreground="@drawable/ripple"
             android:text="Clear Image History"
-            android:textColor="@android:color/white" />
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/rounded_button"
-            android:foreground="@drawable/ripple"
-            android:onClick="clearSavedSubs"
-            android:text="Clear Saved Subs"
             android:textColor="@android:color/white" />
     </LinearLayout>
 </RelativeLayout>
