Refactors some code

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -158,5 +158,15 @@
             android:foreground="@drawable/ripple"
             android:text="Clear Image History"
             android:textColor="@android:color/white" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/rounded_button"
+            android:foreground="@drawable/ripple"
+            android:onClick="clearCache"
+            android:text="Clear Image Cahce"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </RelativeLayout>
