Makes displaying previews more efficient

--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -16,6 +16,7 @@
         android:id="@+id/wall_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:contentDescription="IMAGE"
