--- a/app/src/main/res/layout-v23/activity_wall.xml
+++ b/app/src/main/res/layout-v23/activity_wall.xml
@@ -14,6 +14,7 @@
 
     <ImageView
         android:id="@+id/wall_holder"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
