--- a/app/src/main/res/layout/activity_fav_image.xml
+++ b/app/src/main/res/layout/activity_fav_image.xml
@@ -6,7 +6,8 @@
     tools:context=".FavImageActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="6dp"
+        android:paddingStart="6dp"
+        android:paddingEnd="6dp"
         android:id="@+id/fav_scroll"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
@@ -20,7 +21,8 @@
         android:layout_gravity="center"
         android:layout_margin="16dp"
         android:gravity="center"
-        android:text="You do not have any favorite images, find an image you like and click the star icon on the top right to add a favorite"
+        android:text="You do not have any favorite images, find an
+        image you like and click the star icon on the top right to add a favorite"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:visibility="gone" />
