Shows loading circle only if you scroll down to the end of the recycler view

--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -26,7 +26,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/set_wall"
         android:layout_centerHorizontal="true"
         android:layout_margin="6dp"
         android:orientation="horizontal"
@@ -37,20 +37,33 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@drawable/rounded_button"
-            android:onClick="setWallpaper"
-            android:text="SET WALLPAPER"
+            android:background="@drawable/rounded_button_2"
+            android:onClick="downloadImage"
+            android:text="Download Image"
             android:textColor="@android:color/white" />
 
         <Button
-            android:onClick="downloadImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:background="@drawable/rounded_button_2"
-            android:text="DOWNLOAD IMAGE"
+            android:background="@drawable/rounded_button"
+            android:onClick="launchPost"
+            android:text="Visit Post"
             android:textColor="@android:color/white" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/set_wall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="14dp"
+        android:background="@drawable/rounded_button_2"
+        android:onClick="setWallpaper"
+        android:text="Set Wallpaper"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
