--- a/app/src/main/res/layout/activity_fav_image.xml
+++ b/app/src/main/res/layout/activity_fav_image.xml
@@ -21,8 +21,7 @@
         android:layout_gravity="center"
         android:layout_margin="16dp"
         android:gravity="center"
-        android:text="You do not have any favorite images, find an
-        image you like and click the star icon on the top right to add a favorite"
+        android:text="You do not have any favorite images, find an image you like and click the star icon on the top right to add a favorite"
         android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:visibility="gone" />
