--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
                 tools:ignore="UselessParent">
 
                 <EditText
+                    android:imeOptions="actionSearch"
                     android:id="@+id/search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -141,6 +142,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/imageScroll"
+                android:clipToPadding="false"
+                android:paddingBottom="70dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/sorting"
@@ -158,7 +161,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="12dp"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </RelativeLayout>
     </LinearLayout>
 
